# Capstone-Project

./: .dockerignore  .gitignore  README.md  requirements.txt
app/: README.md  pyproject.toml
app/.inkference_data_all_books_corrected/: inkference.db-shm  inkference.db-wal
app/.inkference_data_all_books_corrected/index/: doc_1.faiss  doc_1.json
app/deploy/: Dockerfile  Dockerfile.allbooks  README.md  deploy_all_books.sh  deploy_to_hf.sh  requirements-space.txt
app/deploy/book1_data/book1/forster1/: B1_P_012.jpg.b64  B1_P_014.jpg.b64  B1_P_015.jpg.b64  B1_P_016.jpg.b64  B1_P_017.jpg.b64  B1_P_020.jpg.b64  B1_P_021.jpg.b64  B1_P_024.jpg.b64  B1_P_025.jpg.b64  B1_P_028.jpg.b64  B1_P_029.jpg.b64  B1_P_030.jpg.b64  B1_P_031.jpg.b64  B1_P_034.jpg.b64  B1_P_035.jpg.b64  B1_P_038.jpg.b64  B1_P_039.jpg.b64  B1_P_042.jpg.b64  B1_P_043.jpg.b64  B1_P_046.jpg.b64  B1_P_047.jpg.b64  B1_P_050.jpg.b64  B1_P_051.jpg.b64  B1_P_052.jpg.b64  B1_P_053.jpg.b64  B1_P_056.jpg.b64  B1_P_057.jpg.b64  B1_P_060.jpg.b64  B1_P_061.jpg.b64  B1_P_064.jpg.b64  B1_P_065.jpg.b64  (+5 more)
app/frontend/: app.js  index.html  styles.css
app/scripts/: correct_corpus.py  prepare_model.py
app/src/inkference/: __init__.py  config.py  schemas.py
app/src/inkference/api/: __init__.py  main.py  services.py
app/src/inkference/htr/: __init__.py  align.py  correction.py  few_shot_examples.json  pipeline.py  recognition.py  segmentation.py
app/src/inkference/rag/: __init__.py  answer.py  index.py  llm.py
app/src/inkference/store/: __init__.py  seed.py  seed_all_books.py  seed_book1.py  store.py
(+1131 files in other folders)
